--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
     "start": "npm i && npm run build && babel-node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "babel-node ./node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,8 @@
     "css-loader": "^6.7.1",
     "express": "^4.18.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.1",
+    "node-fetch": "^3.2.6",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2"
