Added test cases for getting route cost and implementation of Town Graph class

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
     "start": "npm i && npm run build && babel-node server.js",
-    "test": "babel-node ./node_modules/jest/bin/jest.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
