--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
-    "start": "npm i && npm run build && babel-node server.js",
+    "start": "npm i && npm run build && cp ./routes.text ./public/ && babel-node server.js",
     "test": "jest"
   },
   "repository": {
